# Connect-Four

./: .gitignore  CMakeLists.txt  README.md  connect_four.sln  connect_four.vcxproj  connect_four.vcxproj.filters
include/: board.h  bot.h  connect4_house.h  console.h  game.h
src/: board.c  bot.c  connect4_house.c  console.c  game.c  main.c
tests/: boardTests.c  boardTests.h  botTests.c  botTests.h  gameTests.c  gameTests.h  tests.c  tests.h
